# ProjectManager

./: .gitignore  CMakeLists.txt  Doxyfile  ProjectManager.pro  README.md  conanfile.py
.doxygen/: Doxyfile
.doxygen/html/: footer.html
.projectmanager/: layout.xml
form/tabs/: TabGit.ui
inc/gui/tabs/: TabDoxygen.hpp  TabGit.hpp  TabProject.hpp
inc/tools/: Context.hpp  InitParser.hpp
inc/version/: version.hpp
projects/ProjectManager/: Doxyfile  ProjectManager.pjm  ProjectManager.pm  ProjectManager.pro  README.md  colors.conf  context.cpp  context.hpp  footer.html  header.html  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  newproject.cpp  newproject.hpp  newproject.ui  parser.cpp  parser.hpp  qrc_darkstyle.cpp
projects/ProjectManager/config/: compiler.conf  projectmanager.ini  settings.conf
projects/ProjectManager/form/: MainWindow.ui  NewWindow.ui
projects/ProjectManager/inc/: context.hpp  mainwindow.hpp  parser.hpp  version.hpp
projects/ProjectManager/process/: command.hpp  processdisplayer.cpp  processdisplayer.hpp  processmanager.cpp  processmanager.hpp
projects/ProjectManager/settings/: extern_doc.hpp  group_doc.hpp  logger.cpp  logger.hpp  settings.cpp  settings.hpp  settingswindow.cpp  settingswindow.hpp  settingswindow.ui
projects/ProjectManager/src/: main.cpp  mainwindow.cpp  newproject.cpp  parser.cpp
projects/ProjectManager/tabs/: processdisplayer.cpp  processdisplayer.hpp  tab.hpp  tabcompiler.cpp  tabcompiler.hpp  tabcompiler.ui  tabgit.ui  (+8 more)
src/: main.cpp
src/gui/: MainWindow.cpp
src/tools/: Context.cpp  InitParser.cpp
(+97 files in other folders)
